--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
   </head>
+  <link rel = "stylesheet" href = "freebies.css">
  
   
   <body>
